trunk/Archive2/3d/c373cab5388c54/output
main.cpp:19:5: error: expected ')'
X(X const&) = default;
    ^
main.cpp:19:2: note: to match this '('
X(X const&) = default;
 ^
main.cpp:19:15: error: only special member functions may be defaulted
X(X const&) = default;
              ^
2 errors generated.
